--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 body {
     font-family: 'Josefin Sans';
     background-color: #FFFAFB;
